<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">task1</string>
    <string name="sub_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="register">register</string>
    <string name="register_continuation_text">me as collector</string>
    <string name="track">track my application</string>
    <string name="lorem_ipsum_n_is_used">lorem ipsum \nis used</string>
    <string name="body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
    <string name="copyRight">Content Copyright reserved.</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="reach_us">Reach Us.</string>
    <string name="disclaimers">Disclaimers.</string>
    <string name="team">Team.</string>
    <string name="affiliations">Affiliations</string>
    <string name="about_us">About Us.</string>
    <string name="header">header</string>
    <string name="display_image">display_image</string>
    <string name="user">user</string>
    <string name="mobile">mobile</string>
    <string name="upload">Upload</string>
    <string name="edit">Edit</string>
    <string name="john_doe">john.doe</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="_50">50</string>
    <string name="followers">Followers</string>
    <string name="artworks">Artworks</string>
    <string name="_2_3k">2.3k</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="_21">21</string>
    <string name="_43k">43k</string>
    <string name="_120">120</string>
    <string name="pallette">pallette</string>
    <string name="palette">palette</string>
    <string name="uploads">Uploads</string>
    <string name="revenue">Revenue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>